--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-    <div class="container">
+    <div class="wrapper">
         <MonitorBG client:only="react">
             <Fragment slot="fallback">
             </Fragment>
@@ -16,7 +16,7 @@ import Layout from '../layouts/Layout.astro';
 </Layout>
 
 <style>
-    .container {
+    .wrapper {
         width: 100%;
         height: 100%;
         background-color: #222222;
