--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-    <div class="wrapper">
+    <div class="w-full h-full relative">
         <MonitorBG client:only="react">
             <Fragment slot="fallback">
             </Fragment>
@@ -16,13 +16,4 @@ import Layout from '../layouts/Layout.astro';
 </Layout>
 
 <style>
-    .wrapper {
-        width: 100%;
-        height: 100%;
-        background-color: #222222;
-        opacity: 1;
-        background-image: radial-gradient(#333333 2px, transparent 2px), radial-gradient(#333333 2px, #222222 2px);
-        background-size: 80px 80px;
-        background-position: 0 0, 40px 40px;
-    }
 </style>
