feat: 사이드 네비게이션의 홈 메뉴 아이템 경로 수정 및 활성 상태 로직 개선

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -11,7 +11,7 @@ type MenuItem = {
 const menuItems: MenuItem[] = [
     {
         name: 'Home',
-        pathname: '',
+        pathname: '/',
         icon: House,
     },
     {
