--- a/src/components/SideNavItem.astro
+++ b/src/components/SideNavItem.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {pathname, label, icon} = Astro.props;
 
-const active = pathname === Astro.url.pathname.replace(/\/+$/, '');
+const active = pathname === (Astro.url.pathname.replace(/\/+$/, '') || "/");
 ---
 
 <a href={pathname} class=`p-3 flex flex-row items-center gap-3 cursor-pointer rounded-full text-bright select-none transition-all
