style: 사이드 네비게이션의 div에 transition 속성 추가

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -22,7 +22,7 @@ const menuItems: MenuItem[] = [
 ];
 ---
 
-<div class="w-70 h-full flex flex-col bg-[#1e1e1e] border-r border-gray-800 p-8 gap-9 z-50">
+<div transition:name="header" class="w-70 h-full flex flex-col bg-[#1e1e1e] border-r border-gray-800 p-8 gap-9 z-50">
     <div class="w-full flex flex-row items-center">
         <div class="rounded-full w-12 h-12 bg-[url(/images/anvy_profile.png)] bg-center bg-cover"/>
         <div class="ml-4">
