--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -2,6 +2,12 @@
 
 @theme {
     --color-bright: #dadacf;
+    --animate-fadeIn: fadeIn 1s ease-in-out;
+    
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
 }
 
 @font-face {
