--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,52 @@ import Layout from '../layouts/Layout.astro';
     <div class="w-full h-full relative">
         <MonitorBG client:only="react">
             <Fragment slot="fallback">
+                <div class="w-full h-full text-bright text-3xl flex flex-col gap-2 justify-center items-center">
+                    <div class="loader">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                    Loading 3D...
+                </div>
             </Fragment>
         </MonitorBG>
     </div>
 </Layout>
 
 <style>
+    .loader {
+        display: flex;
+        align-items: center;
+    }
+
+    .bar {
+        display: inline-block;
+        width: 3px;
+        height: 20px;
+        background-color: rgba(255, 255, 255, .5);
+        border-radius: 10px;
+        animation: scale-up4 1s linear infinite;
+    }
+
+    .bar:nth-child(2) {
+        height: 35px;
+        margin: 0 5px;
+        animation-delay: .25s;
+    }
+
+    .bar:nth-child(3) {
+        animation-delay: .5s;
+    }
+
+    @keyframes scale-up4 {
+        20% {
+            background-color: #ffff;
+            transform: scaleY(1.5);
+        }
+
+        40% {
+            transform: scaleY(1);
+        }
+    }
 </style>
