style: astro.config.mjs 및 index.astro 파일의 코드 스타일 수정

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
     <div class="w-full h-full relative">
-        <MonitorBG client:only="react">
+        <MonitorBG client:load>
             <Fragment slot="fallback">
                 <div class="w-full h-full text-bright text-3xl flex flex-col gap-2 justify-center items-center">
                     <div class="loader">
