style: 사이드 네비게이션의 직무 설명 수정

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -27,7 +27,7 @@ const menuItems: MenuItem[] = [
         <div class="rounded-full w-12 h-12 bg-[url(/images/anvy_profile.png)] bg-center bg-cover"/>
         <div class="ml-4">
             <h1 class="text-bright text-lg font-bold">Chamchi</h1>
-            <p class="text-bright text-sm">Frontend Developer</p>
+            <p class="text-bright text-sm">Web & Game Dev</p>
         </div>
     </div>
     <div class="flex flex-col gap-3">
