--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "../assets/app.css";
-import SideNav from "../components/SideNav.astro";
+import TopNav from "../components/TopNav.astro";
 import {ClientRouter, fade} from "astro:transitions";
 ---
 <!doctype html>
@@ -14,10 +14,12 @@ import {ClientRouter, fade} from "astro:transitions";
     <ClientRouter/>
 </head>
 <body>
-<SideNav/>
-<main transition:animate={fade({duration: '0.4s'})}>
-    <slot/>
-</main>
+<div class="flex flex-col items-center w-full max-w-3xl mx-4">
+    <TopNav/>
+    <main transition:animate={fade({duration: '0.5s'})}>
+        <slot/>
+    </main>
+</div>
 </body>
 </html>
 
@@ -30,11 +32,12 @@ import {ClientRouter, fade} from "astro:transitions";
     body {
         display: flex;
         flex-direction: row;
+        justify-content: center;
         width: 100%;
         height: 100%;
         background-color: #222222;
         opacity: 1;
-        background-image: linear-gradient(rgba(28, 28, 28, 0.64), rgba(28, 28, 28, 0.64)), url('/images/grid-top-right.svg'), linear-gradient(rgba(28, 28, 28, 0.24), rgba(28, 28, 28, 0.24));
+        background-image: linear-gradient(rgba(28, 28, 28, 0.5), rgba(28, 28, 28, 0.5)), url('/images/grid-top-right.svg'), linear-gradient(rgba(28, 28, 28, 0.24), rgba(28, 28, 28, 0.24));
         background-position: center;
         background-size: cover;
     }
