--- a/src/components/TopNavItem.astro
+++ b/src/components/TopNavItem.astro
@@ -11,7 +11,7 @@ const {pathname, label, icon} = Astro.props;
 const active = pathname === (Astro.url.pathname.replace(/\/+$/, '') || "/");
 ---
 
-<a href={pathname} class=`px-4 flex flex-row items-center gap-3 cursor-pointer rounded-full text-bright select-none transition-all
+<a href={pathname} class=`px-4 flex flex-row items-center gap-3 cursor-pointer rounded-full text-bright select-none transition duration-300 ease-in-out
 hover:bg-bright hover:text-gray-950 hover:scale-110
 ${active && 'bg-bright text-gray-950 scale-110'}`>
     <slot/>
