--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import {ClientRouter, fade} from "astro:transitions";
 </head>
 <body>
 <div class="flex flex-col items-center w-full max-w-3xl mx-4">
-    <TopNav/>
+    <TopNav transition:persist/>
     <main transition:animate={fade({duration: '0.5s'})}>
         <slot/>
     </main>
