--- a/src/components/TopNavItem.astro
+++ b/src/components/TopNavItem.astro
@@ -11,9 +11,9 @@ const {pathname, label, icon} = Astro.props;
 const active = pathname === (Astro.url.pathname.replace(/\/+$/, '') || "/");
 ---
 
-<a href={pathname} class=`px-4 h-full flex flex-row justify-center items-center gap-3 cursor-pointer rounded-full text-bright select-none transition duration-300 ease-in-out
-hover:bg-bright hover:text-gray-950 hover:scale-110
-${active && 'bg-bright text-gray-950 scale-110'}`>
+<a href={pathname} class=`py-2 px-3 flex flex-row justify-center items-center gap-2 cursor-pointer rounded-full text-bright select-none transition duration-300 ease-in-out tracking-wider font-light font-kanit text-[18px]
+hover:bg-bright hover:text-gray-950 hover:scale-105
+${active && 'bg-bright text-gray-950 scale-105'}`>
     <slot/>
     {label}
 </a>
