feat: GameBoy 컴포넌트 및 화면 추가, 상태 관리 기능 구현

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -61,7 +61,7 @@ License: none (public domain)
 
     body {
         line-height: 1;
-        font-family: "Pretendard", sans-serif;
+        font-family: "consolas", sans-serif;
     }
 
     ol, ul {
